fixed spacing on bottom

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,7 @@ body {
     border-radius: 6px;
     padding: 20px 0;
     box-shadow: 5px 7px rgba(25, 25, 25, 0.3);
+    padding-bottom: 100px;
 }
 
 .todoForms {
@@ -32,6 +33,7 @@ body {
     font-size: 1.6rem;
     font-weight: bold;
     color: rgba(95, 12, 12, 0.74);
+    padding: 30px, 0px;
 }
 
 .editButton {
@@ -46,7 +48,6 @@ body {
 .clear {
     display: flex;
     justify-content: center;
-    margin: 100px 0;
 }
 
 .completed-list {
